fix(ui): fix the truncation in the machine table (#1831)
Fix the trunction of some content in the machine list. Upgrade react-components. Remove a Vanilla
override.

Fixes: canonical-web-and-design/maas-ui#1784

--- a/ui/src/scss/_patterns_double-row.scss
+++ b/ui/src/scss/_patterns_double-row.scss
@@ -41,4 +41,8 @@
   [class*="p-double-row"] .p-table-menu {
     margin-left: $sph-inner--small / 2;
   }
+
+  .p-double-row__tooltip-inner {
+    display: inline !important;
+  }
 }
